--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "outDir": "./lib",
     "noImplicitAny": false
   },
-  "include": [
-    "./src/**/*.ts"
+  "files": [
+    "./src/index.ts"
   ]
 }
