--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint --ext .ts,.tsx",
     "lint:fix": "eslint --ext .ts,.tsx --fix",
     "test": "npm run test:e2e",
+    "test:unit": "jest --collectCoverage",
     "test:e2e": "rimraf e2e/__data__ && jest --config e2e/config/jest-config.js"
   },
   "peerDependencies": {
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "9.1.1",
+    "@nestjs/testing": "^7.4.2",
     "@types/jest": "26.0.4",
     "@typescript-eslint/eslint-plugin": "3.6.1",
     "@typescript-eslint/parser": "3.6.1",
