--- a/package.json
+++ b/package.json
@@ -19,31 +19,43 @@
     "lint:fix": "eslint --ext .ts,.tsx --fix",
     "test": "npm run test:e2e",
     "test:unit": "jest --collectCoverage",
-    "test:e2e": "rimraf e2e/__data__ && jest --config e2e/config/jest-config.js"
+    "test:e2e": "rimraf e2e/__data__ && jest --config e2e/config/jest-config.js",
+    "codegen": "graphql-codegen --config gql-codegen.yml",
+    "dev-server:populate": "node -r ts-node/register dev-server/populate.ts",
+    "dev-server:start": "rimraf dev-server/admin-ui && concurrently npm:dev-server:run*",
+    "dev-server:run:server": "node -r ts-node/register dev-server/index.ts",
+    "dev-server:run:worker": "node -r ts-node/register dev-server/index-worker.ts"
   },
   "peerDependencies": {
     "@vendure/core": ">=0.14.0"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "9.1.1",
-    "@golevelup/nestjs-testing": "^0.1.2",
-    "@nestjs/testing": "^7.4.2",
+    "@golevelup/nestjs-testing": "0.1.2",
+    "@graphql-codegen/cli": "^1.17.7",
+    "@graphql-codegen/core": "1.17.7",
+    "@graphql-codegen/typescript": "1.17.7",
+    "@nestjs/testing": "7.4.2",
     "@types/jest": "26.0.4",
     "@typescript-eslint/eslint-plugin": "3.6.1",
     "@typescript-eslint/parser": "3.6.1",
     "@vendure/core": "0.14.0",
+    "@vendure/create": "0.14.0",
     "@vendure/testing": "0.14.0",
     "commitlint": "9.1.0",
+    "concurrently": "5.3.0",
     "eslint": "7.4.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
     "husky": "4.2.5",
     "jest": "26.1.0",
+    "mysql": "^2.18.1",
     "ncp": "2.0.0",
     "prettier": "2.0.5",
     "rimraf": "3.0.2",
     "semantic-release": "17.1.1",
     "ts-jest": "26.1.3",
+    "ts-node": "8.10.2",
     "typescript": "3.8.3"
   },
   "husky": {
