--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@golevelup/nestjs-testing": "0.1.2",
     "@graphql-codegen/cli": "^1.17.7",
     "@graphql-codegen/core": "1.17.7",
+    "@graphql-codegen/near-operation-file-preset": "^1.17.8",
     "@graphql-codegen/typescript": "1.17.7",
+    "@graphql-codegen/typescript-operations": "^1.17.7",
     "@nestjs/testing": "7.4.2",
     "@types/jest": "26.0.4",
     "@typescript-eslint/eslint-plugin": "3.6.1",
