test: update test files

--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "build": "rimraf lib && tsc",
     "lint": "eslint --ext .ts,.tsx",
     "lint:fix": "eslint --ext .ts,.tsx --fix",
-    "test": "npm run test:e2e",
-    "test:unit": "jest --collectCoverage",
-    "test:e2e": "rimraf e2e/__data__ && jest --config e2e/config/jest-config.js",
+    "test": "rimraf e2e/__data__ && jest --collectCoverage",
     "codegen": "graphql-codegen --config gql-codegen.yml",
     "dev-server:populate": "node -r ts-node/register dev-server/populate.ts",
     "dev-server:start": "rimraf dev-server/admin-ui && concurrently npm:dev-server:run*",
