--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E  HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E  HUSKY_GIT_PARAMS",
+      "pre-commit": "yarn lint:fix",
+      "pre-push": "yarn test"
     }
   },
   "commitlint": {
