--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "dev-server:run:server": "node -r ts-node/register dev-server/index.ts",
     "dev-server:run:worker": "node -r ts-node/register dev-server/index-worker.ts"
   },
+  "dependencies": {
+    "@vendure/ui-devkit": "0.14.0"
+  },
   "peerDependencies": {
     "@vendure/core": ">=0.14.0"
   },
